adding terraform cert and other misc reworkings

--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -1,8 +1,7 @@
 <h1 id="-josef-doornink-"><strong>JOSEF DOORNINK</strong></h1>
-<p><strong>Telephone:</strong> 503.927.0358 | <strong>E-mail:</strong> <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#x3a;&#x6a;&#x64;&#x6f;&#x6f;&#x72;&#97;&#x72;&#103;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;&#x6d;">&#x6a;&#x64;&#x6f;&#x6f;&#x72;&#97;&#x72;&#103;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;&#x6d;</a></p>
-<p><a href="https://www.linkedin.com/in/josefdoornink"><strong>LinkedIn</strong></a> | <strong>Portland, Oregon</strong></p>
-<br>
-
+<p><strong>Telephone:</strong> 503.927.0358 | <strong>E-mail:</strong> <a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#111;&#x3a;&#x6a;&#x64;&#x6f;&#x6f;&#x72;&#97;&#x72;&#103;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;&#x6d;">&#x6a;&#x64;&#x6f;&#x6f;&#x72;&#97;&#x72;&#103;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#x63;&#x6f;&#x6d;</a>
+<a href="https://www.linkedin.com/in/josefdoornink"><strong>
+<br>LinkedIn</strong></a> | <strong>Portland, Oregon</strong></p>
 <h3 id="-professional-profile-"><strong>PROFESSIONAL PROFILE</strong></h3>
 <p>Experienced DevOps engineer with over 8 years experience developing enterprise level software using multiple technologies for consumer and business based experiences.
 <br>
@@ -10,17 +9,19 @@ Increased levels of responsibility and ownership in teams, project and strategie
 <br>
 Broad knowledge base team player with experience developing in multiple time-sensitive environments.</p>
 <br>
-
-<h3><strong>TOOLS/LANGUAGES</strong></h3>
-<p>Azure Portal, Agile Methodology, Kubernetes, Helm, Terraform, Docker, Azure DevOps, GIT, GITHUB, GITHUB Actions, C#, .Net Core, T-SQL, SQL Server, CosmosDB, CSS, YAML, HTML, MVVC, MVC, New Relic, Firebase, Ingress, node.js, NPM Angular, LabView, Evernote, Slack, Bootstrap, Pluralsight, PowerShell, Fiddler, Postman</p>
-<br>
 <h3><strong>CERTIFICATIONS</strong></h3>
+<img class="img-thumbnail-badge" src="img/certificates/badge/CKA.png" alt="Skills">
+<img class="img-thumbnail-badge" src="img/certificates/badge/AzureDevAssociate.png" alt="Skills">
+<img class="img-thumbnail-badge" src="img/certificates/badge/Terraform.png" alt="Skills">
 <p>MICROSOFT CERTIFIED AZURE DEVELOPER ASSOCIATE <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> H210-5692 </a>
 <br>
-   CERTIFIED KUBERNETES ADMINISTRATOR <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a></p>
+   CERTIFIED KUBERNETES ADMINISTRATOR <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a>
 <br/>
    TERRAFORM ASSOCIATE <a href="/img/certificates/josef-doornink-terraform-certificate.pdf"> HCTAO-002 </a></p>
 <br/>
+<h3><strong>TOOLS/LANGUAGES</strong></h3>
+<p>Azure Portal, Agile Methodology, Kubernetes, Helm, Terraform, Docker, Azure DevOps, GIT, GITHUB, GITHUB Actions, C#, .Net Core, T-SQL, SQL Server, CosmosDB, CSS, YAML, HTML, MVVC, MVC, New Relic, Firebase, Ingress, node.js, NPM Angular, LabView, Evernote, Slack, Bootstrap, Pluralsight, PowerShell, Fiddler, Postman</p>
+<br>
 <h3><strong>RELEVANT APPLIED EXPERTISE AND EXPERIENCE</strong></h3>
 <table style="width:100%">
 <tr style="text-align:left">
