--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
         <!-- <a class="navbar-brand" style="font-size: 1.5em" href="#page-top">Josef Doornink</a> -->
-        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.35em" href="#page-top">Josef Doornink</a>
+        <!-- <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.35em" href="#page-top">Josef Doornink</a> -->
+        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.35em" href="#portfolio">PORTFOLIO Link</a>
         <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
@@ -66,7 +67,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume5.pdf">PRINTABLE CV (PDF)</a>
             </li>
           </ul>
         </div>
@@ -85,7 +86,12 @@
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto" src="img/Bridge-Small-Brighter.jpg" alt="">
         <h1 class="text-uppercase mb-0">Josef Doornink</h1>
-        <hr class="star-light">
+        <br>
+        <img class="img-thumbnail-badge" src="img/certificates/badge/CKA.png" alt="Skills">
+        <img class="img-thumbnail-badge" src="img/certificates/badge/AzureDevAssociate.png" alt="Skills">
+        <img class="img-thumbnail-badge" src="img/certificates/badge/Terraform.png" alt="Skills">
+        <br>
+        <br>
         <h2 class="font-weight-light mb-0" style="font-size:1.25rem">Enthusiastic DevOps engineer with over 7 years of development experience with enterprise application software.<br/>
           My knowledge, enthusiasm and experience allow me to either lead teams to successful solutions or provide energetic support in fast paced environments.<br/>
           Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
@@ -264,9 +270,9 @@
     <!-- Portfolio Resume -->
     <div class="portfolio-modal mfp-hide" id="portfolio-resume">
       <div class="portfolio-modal-dialog bg-white">
-        <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume4.pdf">
+        <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume5.pdf">
           <i class="fa"></i>
-          PDF (Single Page) </a>
+          PDF Condensed (Printable) </a>
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -275,9 +281,9 @@
               <p class="mb-5"></p>
               <div id="resumeContent"></div>
             </p>
-            <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume4.pdf">
+            <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume5.pdf">
               <i class="fa"></i>
-              PDF (Single Page) </a>
+              PDF (Condensed Version) </a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
