minor tweaks to job title to avoid confusion

--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -42,7 +42,7 @@ Broad knowledge base team player with experience developing in multiple time-sen
     <tbody>
     <tr>
     <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>SOFTWARE DEVELOPER III (DEVOPS)</strong></td>
+    <td style="text-align:left"><strong>DEVOPS ENGINEER</strong></td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Teams:</strong></td>
