add formatting to resume

--- a/index.html
+++ b/index.html
@@ -54,16 +54,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
-        <!-- <a class="navbar-brand" style="font-size: 1.5em" href="#page-top">Josef Doornink</a> -->
-        <!-- <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.35em" href="#page-top">Josef Doornink</a> -->
-        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.35em" href="#portfolio">PORTFOLIO Link</a>
-        <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.0em" href="#page-top">Portfolio</a>
-            </li>
-          </ul>
-        </div> -->
+        <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" style="font-size: 1.35em" href="#portfolio">PORTFOLIO</a>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
@@ -92,9 +83,11 @@
         <img class="img-thumbnail-badge" src="img/certificates/badge/Terraform.png" alt="Skills">
         <br>
         <br>
-        <h2 class="font-weight-light mb-0" style="font-size:1.25rem">Enthusiastic DevOps engineer with over 7 years of development experience with enterprise application software.<br/>
-          My knowledge, enthusiasm and experience allow me to either lead teams to successful solutions or provide energetic support in fast paced environments.<br/>
-          Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.
+        <ul style ="list-style-type: square; text-align: left;">
+        <h2 class="font-weight-light mb-0" style="font-size:1.25rem">
+          <li>Enthusiastic DevOps engineer with over 8 years development experience with enterprise application software.</li>
+          <li>Knowledge, enthusiasm and experience to help teams develop, deploy and maintain successful solutions across multiple environments in a fast-paced setting.<br/>
+          <li>Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.</li>
         </h2>
       </div>
     </header>
