Add formatting to resume-2

--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -215,16 +215,19 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td class="leftTop"><strong>Summary:</strong></td>
     <td><p class="justifyAlign"> Lead test and development engineer in NIH funded, multimillion-dollar research project aimed at solving bone fixation in healthy and osteoporotic patients. </p></td>
     </tr>
-    <tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
-    <td style="text-align:center"><p class="justifyAlign"> 
-        Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).<br/>
-        Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).<br/>
-        Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.<br/>
-        Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).<br/>
-        Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0<br/>
-        Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </p></td>
-    </tr>
+    <td style="text-align:left">
+      <p class="justifyAlign">
+        <ul style="list-style-type: '-  '">
+        <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
+        <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
+        <li>Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.</li>
+        <li>Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).</li>
+        <li>Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0.</li>
+        <li>Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </li>
+        </ul> 
+      </p>
+    </td>
     </tbody>
 </table>
 <br>
@@ -253,7 +256,14 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     </tr>
     <tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
-    <td><p class="justifyAlign"> In charge of determining proper testing techniques for destruction testing of specimen using MTS software.Created and documented test protocols for future process automation, results collection and automation. </p></td>
+    <td>
+      <p class="justifyAlign"> 
+        <ul style="list-style-type: '-  '">
+          <li>In charge of determining proper testing techniques for destruction testing of specimen using MTS software.</li>
+          <li>Created and documented test protocols for future process automation, results collection and automation.</li>
+        </ul>
+      </p>
+    </td>
     </tr>
     </tbody>
 </table>
@@ -282,8 +292,14 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     </tr>
     <tr>
     <td class="leftTop"><strong> Responsibilities:</strong></td>
-    <td><p class="justifyAlign"> Gained unique and valuable experience with the UI side of quality assurance. Communicated remotely through email with interdisciplinary web developers. </p></td>
-    </tr>
+    <td>
+      <p class="justifyAlign"> 
+        
+          <li>Evaulate search algorithm accuracy of ambiguious search queriesGained unique and valuable experience with the UI side of quality assurance.</li>
+          <li>Communicated remotely through email with interdisciplinary web developers. </li>
+        </ul>
+      </p>
+    </td>
     </tbody>
 </table>
 <br>
@@ -308,9 +324,15 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     </tr>
     <tr>
     <td class="leftTop"><strong> Responsibilities:</strong></td>
-    <td><p class="justifyAlign">
-        In charge of laboratory project creation aimed at giving hands on experience implementing principles discussed during lecture.<br/>
-        Solely responsible for grading, lab creation and content delivery.</td>
+    <td>
+      <p class="justifyAlign">
+        <ul style="list-style-type: '-  '">
+          <li>In charge of laboratory project creation aimed at giving hands on experience implementing principles discussed during lecture.</li>
+          <li>Lecture creation and delivery.</li>
+          <li>Solely responsible for grading, lab creation and content delivery.</li>
+        </ul>
+      </p>
+    </td>
     </tr>
     </tbody>
 </table>
@@ -370,4 +392,4 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
 </table>
 <br/>
 <h3 id="-other-"><strong>OTHER</strong></h3>
-<p><strong>Hobbies:</strong> Snowboard, Guitar, Mountain Biker <br/><strong>Teams Sports:</strong> Indoor Soccer, Futsal  | <strong>Other:</strong> Certified Beer Server (2016)<br/>Lived in Argentina, Worked in Germany</p>
+<p><strong>Hobbies:</strong> Snowboard, Guitar, Mountain Biker, Surfer <br/><strong>Teams Sports:</strong> Indoor Soccer, Futsal  | <strong>Other:</strong> Certified Beer Server (2016)<br/>Lived in Argentina, Worked in Germany</p>
