removing personal email

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume5.pdf">PRINTABLE CV (PDF)</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume5.pdf">RESUME (PDF)</a>
             </li>
           </ul>
         </div>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>
+              JOSEF DOORNINK
             </li>
           </ul>
         </div>
@@ -87,7 +87,7 @@
         <h2 class="font-weight-light mb-0" style="font-size:1.25rem">
           <li>Enthusiastic DevOps engineer with over 8 years development experience with enterprise application software.</li>
           <li>Knowledge, enthusiasm and experience to help teams develop, deploy and maintain successful solutions across multiple environments in a fast-paced setting.<br/>
-          <li>Learn more about me by viewing my portfolio below, visit my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page or contact me directly at <a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a>.</li>
+          <li>Learn more about me by viewing my portfolio below and feel free to contact me through my <a href="https://www.linkedin.com/in/josefdoornink/">LinkedIn</a> page.</li>
         </h2>
       </div>
     </header>
@@ -172,7 +172,7 @@
             <p class="lead mb-0">Portland, OR USA</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
+            <h4 class="text-uppercase mb-4">LinkedIn</h4>
             <ul class="list-inline mb-0">
               <!-- <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
@@ -200,10 +200,6 @@
                 </a>
               </li> -->
             </ul>
-          </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">Contact Info</h4>
-            <p class="lead mb-0"><a href="mailto:jdoorarg@gmail.com">jdoorarg@gmail.com</a></p>
           </div>
         </div>
       </div>
