deleting old resume versions and fixing list alignment

--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -58,7 +58,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <br/>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <p class="justifyAlign">
+      <p class="leftAlign">
         <ul style="list-style-type: '-  '"> 
           <li>Design and construct infrastructure and comprehensive CI/CD pipelines using Terraform and Azure to facilitate the seamless delivery of multiple microservices for an integrated SAAS solution.</li>
           <li>Create and identify unique CLI tooling for the monitoring existing applications throughout environments using GoLang.</li>
@@ -100,7 +100,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <br/>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <p class="justifyAlign"> 
+      <p class="leftAlign"> 
         <ul style="list-style-type: '-  '">
           <li>Lead DevOps engineer responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.</li>
           <li>Sole DevOps engineer responsible to work with teams of product managers, developers and architects to transfer on-premise solutions to Cloud SAAS offerings using Azure Portal and Azure DevOps used by thousands of daily users.</li>
@@ -135,7 +135,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td class="centerTop"><p class="justifyAlign"> Software Engineer tasked with development, refactoring, improving architecture and maintenance of multi-tenant software platform for e-commerce sales through the use of Microsoft Stack technology and tools integrated with API based SaaS software. </p></td>
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
-    <td><p class="justifyAlign"> 
+    <td><p class="leftAlign"> 
       <ul style="list-style-type: '-  '">
         <li>Engineer, analyze and provide technical solutions and assessment risks, gaps, defects and deficiencies throughout the SDLC on a multi-tenant e-commerce platform using C#, Microsoft.Net, Visual Studio, SSMS, HTML5, Javascript, CSS, T-SQL, and GIT.</li>
         <li>Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.</li>
@@ -179,7 +179,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <p class="justifyAlign">
+      <p class="leftAlign">
         <ul style="list-style-type: '-  '">
           <li>Develop and maintain production level multi-tenant, e-commerce software platform in an Agile environment using ASP.NET 4.5 with Web Forms, C#5.0, T-SQL, SSMS 2012 and Visual Studio 2013.</li>
           <li>Conversion of existing legacy webpages from Visual Basic code to .Net 4.5 framework using Visual Studio 2013, C#5.0, Webforms and T-SQL.</li>
@@ -216,8 +216,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td><p class="justifyAlign"> Lead test and development engineer in NIH funded, multimillion-dollar research project aimed at solving bone fixation in healthy and osteoporotic patients. </p></td>
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
-    <td style="text-align:left">
-      <p class="justifyAlign">
+      <p class="leftAlign">
         <ul style="list-style-type: '-  '">
         <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
         <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
@@ -227,7 +226,6 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
         <li>Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </li>
         </ul> 
       </p>
-    </td>
     </tbody>
 </table>
 <br>
@@ -257,7 +255,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
-      <p class="justifyAlign"> 
+      <p class="leftAlign"> 
         <ul style="list-style-type: '-  '">
           <li>In charge of determining proper testing techniques for destruction testing of specimen using MTS software.</li>
           <li>Created and documented test protocols for future process automation, results collection and automation.</li>
@@ -293,7 +291,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <tr>
     <td class="leftTop"><strong> Responsibilities:</strong></td>
     <td>
-      <p class="justifyAlign"> 
+      <p class="leftAlign"> 
         
           <li>Evaulate search algorithm accuracy of ambiguious search queriesGained unique and valuable experience with the UI side of quality assurance.</li>
           <li>Communicated remotely through email with interdisciplinary web developers. </li>
@@ -325,7 +323,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <tr>
     <td class="leftTop"><strong> Responsibilities:</strong></td>
     <td>
-      <p class="justifyAlign">
+      <p class="leftAlign">
         <ul style="list-style-type: '-  '">
           <li>In charge of laboratory project creation aimed at giving hands on experience implementing principles discussed during lecture.</li>
           <li>Lecture creation and delivery.</li>
