--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <p class="lead mb-0">Portland, OR USA</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">LinkedIn</h4>
+            <h4 class="text-uppercase mb-4">Contact</h4>
             <ul class="list-inline mb-0">
               <!-- <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
@@ -260,8 +260,7 @@
     <div class="portfolio-modal mfp-hide" id="portfolio-resume">
       <div class="portfolio-modal-dialog bg-white">
         <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume5.pdf">
-          <i class="fa"></i>
-          PDF Condensed (Printable) </a>
+          <i class="fa"></i>Resume (1-Page) </a>
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -272,7 +271,7 @@
             </p>
             <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume5.pdf">
               <i class="fa"></i>
-              PDF (Condensed Version) </a>
+              PDF (1-Page) </a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
