--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -3,7 +3,7 @@
 <a href="https://www.linkedin.com/in/josefdoornink"><strong>
 <br>LinkedIn</strong></a> | <strong>Portland, Oregon</strong></p>
 <h3 id="-professional-profile-"><strong>PROFESSIONAL PROFILE</strong></h3>
-<p>Experienced DevOps Engineer over 8 years experience developing enterprise-level software for both consumer and business-based experiences.
+<p>Enthusiastic DevOps Engineer with over 8 years experience developing enterprise-level software for both consumer and business-based experiences.
 <br>
 Versatile team player with a broad knowledge base and a proven ability to thrive in multiple time-sensitive environments through effective collaboration and adaptability.
 <br>
@@ -60,7 +60,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td>
       <p class="leftAlign">
         <ul style="list-style-type: '-  '"> 
-          <li>Design and construct infrastructure and comprehensive CI/CD pipelines using Terraform and Azure to facilitate the seamless delivery of multiple microservices for an integrated SAAS solution.</li>
+          <li>Design and construct infrastructure and comprehensive CI/CD pipelines using image based methodology and Azure to facilitate the seamless delivery of multiple microservices for an integrated SAAS solution.</li>
           <li>Create and identify unique CLI tooling for the monitoring existing applications throughout environments using GoLang.</li>
           <li>Contribute to informed decision-making processes by providing expert guidance on information system options, risk assessment, and operational impact.</li>
           <li>Execute releases and script updates, while also exploring and implementing new third-party products to enhance system capabilities.</li>
@@ -107,7 +107,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
           <li>Responsible for monitoring cloud resources and implementing cost saving measures resulting in savings of over $250K annually.</li>
           <li>Implemented monitoring solutions for both service and infrastructure as well as adding improvements to our internal tooling for improved software performance and delivery.</li>
           <li>Worked with teams of product managers, developers and architects to document and understand existing functionality of an on-premise software solution for future Cloud transfer.</li>
-          <li>Front-End engineer tasked with creating Angular UI integration with .NET APIs for transfer of on-premise software solution to the Cl</li>
+          <li>Front-End engineer tasked with creating Angular UI integration with .NET APIs for transfer of on-premise software solution to the Cloud</li>
         </ul>
       </p>
     </tbody>
