--- a/index.html
+++ b/index.html
@@ -58,14 +58,8 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume5.pdf">RESUME (PDF)</a>
-            </li>
-          </ul>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              JOSEF DOORNINK
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume6_1-page.pdf">RESUME 1-Page (PDF)</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"  href="/Resume/resume6-Full.pdf">RESUME-FULL</a>
             </li>
           </ul>
         </div>
@@ -259,7 +253,7 @@
     <!-- Portfolio Resume -->
     <div class="portfolio-modal mfp-hide" id="portfolio-resume">
       <div class="portfolio-modal-dialog bg-white">
-        <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume5.pdf">
+        <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume6_1-page.pdf">
           <i class="fa"></i>Resume (1-Page) </a>
         <div class="container text-center">
           <div class="row">
@@ -269,7 +263,7 @@
               <p class="mb-5"></p>
               <div id="resumeContent"></div>
             </p>
-            <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume5.pdf">
+            <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume6_1-page.pdf">
               <i class="fa"></i>
               PDF (1-Page) </a>
             <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -280,32 +274,6 @@
         </div>
       </div>
     </div> 
-
-    <!-- Portfolio Resume
-    <div class="portfolio-modal mfp-hide" id="portfolio-resume">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume3.pdf">
-          <i class="fa"></i>
-          PDF (Single Page) </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Curriculum Vitae</h2>
-              <hr class="star-dark mb-5">
-              <p class="mb-5"></p>
-              <div id="resumeContent"></div>
-            </p>
-            <a class="btn btn-primary-red btn-lg rounded-pill" href="/Resume/resume3.pdf">
-              <i class="fa"></i>
-              PDF (Single Page) </a>
-            <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>  -->
 
     <!-- Portfolio Patents and Awards -->
     <div class="portfolio-modal mfp-hide" id="portfolio-patents-and-awards">
