--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -37,29 +37,32 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <thead>
     <tr>
     <th style="text-align:left"><strong>01.2022 – NOW</strong></th>
-    <th></th><strong>VIEWPOINT CONSTRUCTION SOFTWARE</strong></th>
+    <th></th><strong>TRIMBLE/VIEWPOINT CONSTRUCTION SOFTWARE</strong></th>
     <th style="text-align:right">Portland, OR</th>
     </tr>
     </thead>
     <tbody>
     <tr>
     <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>SENIOR DEVOPS ENGINEER</strong></td>
+    <td style="text-align:left"><strong>SENIOR DEVOPS ENGINEER</strong>
+    </td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Teams:</strong></td>
-    <td class="centerTop"><p class="justifyAlign">HRIS, DevOps</p></td>
+    <td class="centerTop"><p class="justifyAlign">HRIS, DevOps</p>
+    </td>
     </tr>
     <tr>
     <td class="leftTop"><strong>Summary:</strong></td>
     <td class="centerTop"><p class="justifyAlign"> Experienced Senior DevOps Engineer proficient in architecting and optimizing application deployment across diverse runtime environments. Expertise in utilizing Continuous Integration methodologies and tools to facilitate seamless continuous delivery solutions across multiple geographical locations. Skilled in orchestrating Kubernetes-based image deployments within the Azure portal to enhance efficiency and scalability.
-    </p></td>
+    </p>
+    </td>
     </tr>
     <br/>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
       <p class="leftAlign">
-        <ul style="list-style-type: '-  '"> 
+        <ul style="list-style-type: '-  '; text-align: left"> 
           <li>Design and construct infrastructure and comprehensive CI/CD pipelines using image based methodology and Azure to facilitate the seamless delivery of multiple microservices for an integrated SAAS solution.</li>
           <li>Create and identify unique CLI tooling for the monitoring existing applications throughout environments using GoLang.</li>
           <li>Contribute to informed decision-making processes by providing expert guidance on information system options, risk assessment, and operational impact.</li>
