--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -104,7 +104,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
       <p class="leftAlign"> 
-        <ul style="list-style-type: '-  '">
+        <ul style="list-style-type: '-  '; text-align: left">
           <li>Lead DevOps engineer responsible for building infrastructure and integrating full CI/CD pipeline aimed at delivering new microservices for an integrated SAAS offering using GitHub actions and the Azure Portal.</li>
           <li>Sole DevOps engineer responsible to work with teams of product managers, developers and architects to transfer on-premise solutions to Cloud SAAS offerings using Azure Portal and Azure DevOps used by thousands of daily users.</li>
           <li>Responsible for monitoring cloud resources and implementing cost saving measures resulting in savings of over $250K annually.</li>
@@ -139,7 +139,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td><p class="leftAlign"> 
-      <ul style="list-style-type: '-  '">
+      <ul style="list-style-type: '-  '; text-align: left">
         <li>Engineer, analyze and provide technical solutions and assessment risks, gaps, defects and deficiencies throughout the SDLC on a multi-tenant e-commerce platform using C#, Microsoft.Net, Visual Studio, SSMS, HTML5, Javascript, CSS, T-SQL, and GIT.</li>
         <li>Integrate current software platform with new Greenfield platform using Angular 1.4, .NET 4.6.2, MVC architecture and Bootstrap technologies through use of API based SaaS.</li>
         <li>Refactor existing C#5.0 code for better performance as measured through New Relic performance management.</li>
@@ -183,7 +183,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
       <p class="leftAlign">
-        <ul style="list-style-type: '-  '">
+        <ul style="list-style-type: '-  '; text-align: left">
           <li>Develop and maintain production level multi-tenant, e-commerce software platform in an Agile environment using ASP.NET 4.5 with Web Forms, C#5.0, T-SQL, SSMS 2012 and Visual Studio 2013.</li>
           <li>Conversion of existing legacy webpages from Visual Basic code to .Net 4.5 framework using Visual Studio 2013, C#5.0, Webforms and T-SQL.</li>
           <li>Integrate and support conversion functionality throughout customized software and integrating with Authorize.Net API.</li>
@@ -220,13 +220,13 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     </tr>
     <td class="leftTop"><strong>Responsibilities:</strong></td>
       <p class="leftAlign">
-        <ul style="list-style-type: '-  '">
-        <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
-        <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
-        <li>Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.</li>
-        <li>Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).</li>
-        <li>Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0.</li>
-        <li>Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </li>
+        <ul style="list-style-type: '-  '; text-align: left">
+          <li>Manage successful implant creation, delivery and test methodology producing multiple US FDA approved implants (K101696, K123918, K130810).</li>
+          <li>Create, develop, file and deliver test results of in-house designed implant resulting in 2 x US patents (US9314286 B2 and US8740955 B2).</li>
+          <li>Recipient 2010 American Academy of Orthopaedic Surgeons Award of Excellence for in-house implant design.</li>
+          <li>Collaborate with multibillion-dollar orthopaedic implant manufacturer (Zimmer) to transition pilot data into industry disruptive technology resulting in revenue of greater than 5 million dollars annually (2013).</li>
+          <li>Sole developer of custom software responsible for all in-house testing and implant development creating custom software using LabView 8.0.</li>
+          <li>Lead teams of research surgeons and students in the development of new and innovate orthopaedic implants and challenge the status-quo of an industry using proven and innovative principles and ideas as guidance. </li>
         </ul> 
       </p>
     </tbody>
@@ -259,7 +259,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td class="leftTop"><strong>Responsibilities:</strong></td>
     <td>
       <p class="leftAlign"> 
-        <ul style="list-style-type: '-  '">
+        <ul style="list-style-type: '-  '; text-align: left">
           <li>In charge of determining proper testing techniques for destruction testing of specimen using MTS software.</li>
           <li>Created and documented test protocols for future process automation, results collection and automation.</li>
         </ul>
@@ -295,7 +295,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td class="leftTop"><strong> Responsibilities:</strong></td>
     <td>
       <p class="leftAlign"> 
-        
+        <ul style="list-style-type: '-  '; text-align: left">
           <li>Evaulate search algorithm accuracy of ambiguious search queriesGained unique and valuable experience with the UI side of quality assurance.</li>
           <li>Communicated remotely through email with interdisciplinary web developers. </li>
         </ul>
@@ -327,7 +327,7 @@ Proficient in utilizing diverse technologies to deliver high-quality solutions a
     <td class="leftTop"><strong> Responsibilities:</strong></td>
     <td>
       <p class="leftAlign">
-        <ul style="list-style-type: '-  '">
+        <ul style="list-style-type: '-  '; text-align: left">
           <li>In charge of laboratory project creation aimed at giving hands on experience implementing principles discussed during lecture.</li>
           <li>Lecture creation and delivery.</li>
           <li>Solely responsible for grading, lab creation and content delivery.</li>
