--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -3,59 +3,63 @@
 <a href="https://www.linkedin.com/in/josefdoornink"><strong>
 <br>LinkedIn</strong></a> | <strong>Portland, Oregon</strong></p>
 <h3 id="-professional-profile-"><strong>PROFESSIONAL PROFILE</strong></h3>
-<p>Enthusiastic DevOps Engineer with over 8 years experience developing enterprise-level software for both consumer and business-based experiences.
-<br>
-Versatile team player with a broad knowledge base and a proven ability to thrive in multiple time-sensitive environments through effective collaboration and adaptability.
-<br>
-Consistent increase in responsibility and ownership within teams, projects, and strategic initiatives.
-<br>
-Proficient in utilizing diverse technologies to deliver high-quality solutions at scale.</p>
+<p>
+  Enthusiastic DevOps Engineer with over 8 years experience developing enterprise-level software for both consumer and business-based experiences.
+  <br>
+  Versatile team player with a broad knowledge base and a proven ability to thrive in multiple time-sensitive environments through effective collaboration and adaptability.
+  <br>
+  Consistent increase in responsibility and ownership within teams, projects, and strategic initiatives.
+  <br>
+  Proficient in utilizing diverse technologies to deliver high-quality solutions at scale.
+</p>
 <br>
 <h3><strong>CERTIFICATIONS</strong></h3>
 <img class="img-thumbnail-badge" src="img/certificates/badge/CKA.png" alt="Skills">
 <img class="img-thumbnail-badge" src="img/certificates/badge/AzureDevAssociate.png" alt="Skills">
 <img class="img-thumbnail-badge" src="img/certificates/badge/Terraform.png" alt="Skills">
-<p>MICROSOFT CERTIFIED AZURE DEVELOPER ASSOCIATE <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> H210-5692 </a>
-<br>
-   CERTIFIED KUBERNETES ADMINISTRATOR <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a>
-<br/>
-   TERRAFORM ASSOCIATE <a href="/img/certificates/josef-doornink-terraform-certificate.pdf"> HCTAO-002 </a></p>
+<p>
+  MICROSOFT CERTIFIED AZURE DEVELOPER ASSOCIATE <a href="/img/certificates/josef-doornink-azure-certificate.pdf"> H210-5692 </a>
+  <br>
+  CERTIFIED KUBERNETES ADMINISTRATOR <a href="/img/certificates/josef-doornink-cka-certificate.pdf"> LF-W50BPV1LPD </a>
+  <br/>
+  TERRAFORM ASSOCIATE <a href="/img/certificates/josef-doornink-terraform-certificate.pdf"> HCTAO-002 </a>
+</p>
 <br/>
 <h3><strong>TOOLS/LANGUAGES</strong></h3>
-<p>Azure Portal, Azure DevOps, Kubernetes, Helm, Terraform, Docker, GIT, GITHUB, GITHUB Actions, GoLang, Agile Methodology, C#, .Net Core, T-SQL, SQL Server, CosmosDB, CSS, YAML, HTML, MVVC, MVC, New Relic, node.js, NPM, Angular, LabView, Slack, Bootstrap, PowerShell, Fiddler, Postman</p>
+<p>
+  Azure Portal, Azure DevOps, Kubernetes, Helm, Terraform, Docker, GIT, GITHUB, GITHUB Actions, GoLang, Agile Methodology, C#, .Net Core, T-SQL, SQL Server, CosmosDB, CSS, YAML, HTML, MVVC, MVC, New Relic, node.js, NPM, Angular, LabView, Slack, Bootstrap, PowerShell, Fiddler, Postman
+</p>
 <br>
 <h3><strong>RELEVANT APPLIED EXPERTISE AND EXPERIENCE</strong></h3>
 <table style="width:100%">
-<tr style="text-align:left">
-<td>CI/CD Creation and Maintentance <br/>Cloud Assets <br/>SaaS Creation and Delivery <br/>IaaS Creation and Maintenance <br/>Custom Tooling Identification and Creation</td>
-<td style="text-align:right">Business Process Design<br/> Asset Management and Control<br/> Solutions and Service Management<br/> Team Building and Management <br/> Innovation and Release Management
-</tr>   
+  <tr style="text-align:left">
+    <td>CI/CD Creation and Maintentance <br/>Cloud Assets <br/>SaaS Creation and Delivery <br/>IaaS Creation and Maintenance <br/>Custom Tooling Identification and Creation</td>
+    <td style="text-align:right">Business Process Design<br/> Asset Management and Control<br/> Solutions and Service Management<br/> Team Building and Management <br/> Innovation and Release Management
+  </tr>   
 </table>
-<p><br/></p>
+<br/>
 <h3 id="-work-experience-"><strong>WORK EXPERIENCE</strong></h3>
 <table >
     <thead>
-    <tr>
-    <th style="text-align:left"><strong>01.2022 – NOW</strong></th>
-    <th></th><strong>TRIMBLE/VIEWPOINT CONSTRUCTION SOFTWARE</strong></th>
-    <th style="text-align:right">Portland, OR</th>
-    </tr>
+      <tr>
+        <th style="text-align:left"><strong>01.2022 – NOW</strong></th>
+        <strong>TRIMBLE/VIEWPOINT CONSTRUCTION SOFTWARE</strong>
+        <th style="text-align:right">Portland, OR</th>
+      </tr>
     </thead>
     <tbody>
     <tr>
-    <td class="leftTop"><strong>Title:</strong></td>
-    <td style="text-align:left"><strong>SENIOR DEVOPS ENGINEER</strong>
-    </td>
+      <td class="leftTop"><strong>Title:</strong></td>
+      <td style="text-align:left"><strong>SENIOR DEVOPS ENGINEER</strong>
+      </td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Teams:</strong></td>
-    <td class="centerTop"><p class="justifyAlign">HRIS, DevOps</p>
-    </td>
+      <td class="leftTop"><strong>Teams:</strong></td>
+      <td class="centerTop"><p class="justifyAlign">HRIS, DevOps</td>
     </tr>
     <tr>
-    <td class="leftTop"><strong>Summary:</strong></td>
-    <td class="centerTop"><p class="justifyAlign"> Experienced Senior DevOps Engineer proficient in architecting and optimizing application deployment across diverse runtime environments. Expertise in utilizing Continuous Integration methodologies and tools to facilitate seamless continuous delivery solutions across multiple geographical locations. Skilled in orchestrating Kubernetes-based image deployments within the Azure portal to enhance efficiency and scalability.
-    </p>
+      <td class="leftTop"><strong>Summary:</strong></td>
+      <td class="centerTop"><p class="justifyAlign"> Experienced Senior DevOps Engineer proficient in architecting and optimizing application deployment across diverse runtime environments. Expertise in utilizing Continuous Integration methodologies and tools to facilitate seamless continuous delivery solutions across multiple geographical locations. Skilled in orchestrating Kubernetes-based image deployments within the Azure portal to enhance efficiency and scalability.
     </td>
     </tr>
     <br/>
